# mister-overlay

./: .gitignore  LICENSE  MANIFEST.in  README.md  advanced_layout.py  font_manager.py  index.html  interactive_overlay.py  layout.py  package.json  pyproject.toml  render.py  requirements.txt  tailwind.config.js  test_horizontal_layout.py  u2net.py  vision.py
src/: App.tsx  index.css
src/components/: Header.tsx  ImageUpload.tsx  LoadingOverlay.tsx  PlacementSelector.tsx  PreviewCanvas.tsx  Sidebar.tsx  StyleCustomizer.tsx  TextEditor.tsx
src/hooks/: useTextOverlay.ts
textoverlay/: __init__.py  api.py
textoverlay/models/: advanced_layout.py  model_downloader.py  u2net.py
textoverlay/overlay/: interactive_overlay.py  run_overlay.py
textoverlay/utils/: render.py
