[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textoverlay"
version = "0.1.0"
authors = [
    {name = "Yug Makhecha", email = "yugmakhecha1710@gmail.com"},
]
description = "A Python package for adding text overlays to images with the power of Computer Vision"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["text", "overlay", "image", "AI", "graphics"]


dependencies = [
    "Pillow>=8.0.0",
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "transformers>=4.0.0",
    "opencv-python>=4.5.0",
    "requests>=2.25.0",
    # Add other dependencies from your imports
]

[project.urls]
"Homepage" = "https://github.com/YugMakhecha17/textoverlay"
"Source" = "https://github.com/YugMakhecha17/textoverlay"
"Bug Reports" = "https://github.com/YugMakhecha17/textoverlay/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["textoverlay*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.png", "*.jpg", "*.jpeg", "*.ttf", "*.otf", "*.pt", "*.pth"]